force-app/main/default/objects/Model_3D__c.object
<CustomObject>
    <fields>
        <fullName>Engineering_Data_Book_and_3D_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Data Book and 3D Model</label>
        <referenceTo>Engineering_Data_Book_and_3D_Model__c</referenceTo>
        <relationshipName>Model_3D</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3D_Model_File_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3D Model Report File URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3D_Model_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล 3D Model</inlineHelpText>
        <label>3D Model Report File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3D_Model_URL__c</fullName>
        <formula>IF(URL__c == null, &quot;No File&quot; ,HYPERLINK(URL__c, &quot;Open File&quot;, &quot;_self&quot;))</formula>
        <label>3D Model Report File URL</label>
        <type>Text</type>
    </fields>
    <label>3D Model*</label>
    <nameField>
        <label>3D Model* Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>